<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Listas">

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/agbalumo"
        android:text="@string/BTregtersar"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#94D8A38C"
        android:fontFamily="@font/agbalumo"
        android:text="@string/TXTnombre"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#94D8A38C"
        android:fontFamily="@font/agbalumo"
        android:text="@string/TXTedad"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtCiiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#94D8A38C"
        android:fontFamily="@font/agbalumo"
        android:text="@string/TXTciudad"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ImgUsuario"
        android:layout_width="258dp"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:contentDescription="@string/IMGusuario"
        tools:srcCompat="@drawable/kla" />

    <ListView
        android:id="@+id/listaUsusarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#94D8A38C">

    </ListView>
</LinearLayout>