<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoespadalamb"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:background="#B40D060C"
        android:fontFamily="@font/agbalumo"
        android:gravity="center"
        android:text="@string/TVtitulo"
        android:textAlignment="center"
        android:textColor="#C6668C"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVideos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#2B0719"
        android:fontFamily="@font/agbalumo"
        android:text="@string/BTNvideos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnListas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnListas" />

    <Button
        android:id="@+id/btnListas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="134dp"
        android:backgroundTint="#2B0719"
        android:fontFamily="@font/agbalumo"
        android:text="@string/BTNlistas"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>